# analytics-toolbox

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: stress_test_iowa.py
docs/: CODE_REVIEW_PLAN.md  DATA_HANDLING.md  ONBOARDING.md
notebooks/: end_to_end.ipynb  entity_resolution_demo.ipynb  feature_engineering_demo.ipynb  geospatial_demo.ipynb  synth_kit_demo.ipynb
src/analytics_toolbox/: __init__.py  _config.py  _fips.py  _storage.py  utils.py
src/analytics_toolbox/acs/: ARCHITECTURE.md  README.md  __init__.py  _census_api.py  _config.py  _errors.py  _geography.py  _manifest.py  _settings.py  _variable_history.py  ingest.py
src/analytics_toolbox/entity_resolution/: ARCHITECTURE.md  README.md  SPEC.md  __init__.py  _block.py  _cluster.py  _config.py  _match.py  _preprocess.py  resolve.py
src/analytics_toolbox/entity_resolution/fixtures/: multi_system.py
src/analytics_toolbox/feature_engineering/: ARCHITECTURE.md  README.md  SPEC.md  __init__.py  _sql.py  _types.py  _validate.py  compose.py  engine.py
src/analytics_toolbox/feature_engineering/examples/: medicaid_features.py
src/analytics_toolbox/feature_engineering/fixtures/: medicaid.py
src/analytics_toolbox/geospatial/: ARCHITECTURE.md  README.md  __init__.py  _config.py  _scourgify_compat.py  address_geocoder.py  address_matcher.py  address_normalizer.py  cli.py  nad_preprocess_ingest.py  pipeline.py
src/analytics_toolbox/synth_kit/: ARCHITECTURE.md  README.md  SPEC.md  __init__.py  _detect.py  _phi.py  _profile.py  _public.py  _synthesize.py  _types.py
src/analytics_toolbox/synth_kit/fixtures/: healthcare.py
tests/: test_smoke.py  test_utils.py
tests/acs/: conftest.py  test_census_api.py  test_config.py  test_geography.py  test_ingest.py  test_manifest.py  test_variable_history.py
tests/entity_resolution/: conftest.py  test_block.py  test_cluster.py  test_config.py  test_fixtures.py  test_integration.py  test_match.py  test_preprocess.py  test_resolve.py
tests/feature_engineering/: conftest.py  test_compose.py  test_engine.py  test_examples.py  test_fixtures.py  test_integration.py  test_skeleton.py  test_sql.py  test_types.py  test_validate.py
tests/geospatial/: conftest.py  test_address_geocoder.py  test_address_matcher.py  test_address_normalizer.py  test_cli.py  test_config.py  test_nad_preprocess_ingest.py  test_pipeline.py  test_scourgify_compat.py
tests/synth_kit/: conftest.py  test_detect.py  test_fixtures.py  test_integration.py  test_phi.py  test_profile.py  test_synthesize.py  test_types.py
