[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "privacy-analytics-toolbox"
version = "0.1.1"
description = "Reusable, privacy-first analytics utilities — geospatial geocoding, entity resolution, synthetic data, feature engineering, Census ACS ingest, and DuckDB helpers."
authors = [
    { name = "Matthew Bargstadt", email = "matthew.bargstadt@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4"
keywords = [
    "analytics", "privacy", "hipaa", "geospatial", "geocoding",
    "entity-resolution", "synthetic-data", "feature-engineering",
    "duckdb", "census", "acs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Database",
    "Typing :: Typed",
]
# Single dependency set — no per-module extras. The modules share a common
# backbone (pandas/numpy, duckdb, pydantic) and the remaining deps are individually
# light and reliably-wheeled, so one `pip install privacy-analytics-toolbox` installs
# the whole toolbox. This keeps the package import-simple (eager __init__s, no
# isolation shims). See CLAUDE.md "Packaging & dependencies".
dependencies = [
    # Core data backbone
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "duckdb>=1.1",
    # Config + settings (cross-cutting)
    "pydantic>=2",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    # HTTP (geospatial reference-data downloads, ACS Census API)
    "httpx>=0.27",
    # Matching / clustering (geospatial, entity_resolution)
    "rapidfuzz>=3.9",
    "networkx>=3.0",
    # Synthetic data (synth_kit)
    "sqlalchemy>=2.0",
    "faker>=24.0",
    # Geospatial GIS stack
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "usaddress-scourgify>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/bargstadt/analytics-toolbox"
Repository = "https://github.com/bargstadt/analytics-toolbox"
Issues = "https://github.com/bargstadt/analytics-toolbox/issues"
Documentation = "https://github.com/bargstadt/analytics-toolbox/tree/main/docs"

[project.scripts]
analytics-toolbox = "analytics_toolbox.geospatial.cli:main"

[tool.poetry]
packages = [
    { include = "analytics_toolbox", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
ruff = "^0.6"
duckdb-engine = {version = ">=0.13", python = ">=3.11"}
pip-audit = "^2.10.1"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
